force-app/main/default/src/objects/Lead_Convert_Care_Plan_RT_Mapping_MVN__mdt/Lead_Convert_Care_Plan_RT_Mapping_MVN__mdt.object-meta.xml
<CustomObject>
    <description>Maps lead record types to the types of care plan record types that should be created on conversion</description>
    <label>Lead Convert Care Plan RT Mapping</label>
    <pluralLabel>Lead Convert Care Plan RT Mappings</pluralLabel>
</CustomObject>