force-app/main/default/src/objects/Lead_Convert_Care_Plan_RT_Mapping_MVN__mdt/fields/Care_Program_DeveloperName_MVN__c.field-meta.xml
<CustomField>
    <fullName>Care_Program_DeveloperName_MVN__c</fullName>
    <description>Developer name corresponding to the field CareProgram.PJN_Program_DeveloperName__c.  Used to determine the care program to associate to the care plan being created on conversion.</description>
    <inlineHelpText>Developer name of the care program to associate to the care plan.</inlineHelpText>
    <label>Care Program DeveloperName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>