force-app/main/default/src/objects/Lead_Convert_Care_Plan_RT_Mapping_MVN__mdt/fields/CarePlan_RecordType_Namespace_Prefix_MVN__c.field-meta.xml
<CustomField>
    <fullName>CarePlan_RecordType_Namespace_Prefix_MVN__c</fullName>
    <description>Namespace of the care plan record type to use when converting lead</description>
    <label>Care Plan Record Type Namespace Prefix</label>
    <length>15</length>
    <type>Text</type>
</CustomField>