force-app/main/default/src/objects/Lead_Convert_Care_Plan_RT_Mapping_MVN__mdt/fields/Lead_Record_Type_DeveloperName_MVN__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_Type_DeveloperName_MVN__c</fullName>
    <description>Lead record type to match against</description>
    <inlineHelpText>Developer name of the lead record type</inlineHelpText>
    <label>Lead Record Type Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>