force-app/main/default/src/objects/Lead_Convert_Care_Plan_RT_Mapping_MVN__mdt/fields/Lead_Record_Type_Namespace_Prefix_MVN__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_Type_Namespace_Prefix_MVN__c</fullName>
    <description>Lead record type namespace prefix to match against</description>
    <label>Lead Record Type Namespace Prefix</label>
    <length>15</length>
    <type>Text</type>
</CustomField>